--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,9 +3,9 @@
   "main": "worker.js",
   "compatibility_date": "2025-01-01",
   "observability": {
-    "enabled": false,
+    "enabled": true,
     "logs": {
-      "enabled": false
+      "enabled": true
     }
   }
 }
